WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107897
INPUT_MULTIPLE_FIELDS_UI: Inconsistent value of aria-valuetext attribute
https://bugs.webkit.org/show_bug.cgi?id=107897
Summary
INPUT_MULTIPLE_FIELDS_UI: Inconsistent value of aria-valuetext attribute
Kent Tamura
Reported
2013-01-24 19:19:24 PST
1. Open a document with <input type=date>. 2. Check aria-valuetext attribute of shadow nodes. ==> -webkit-datetime-edit-*-field elements have no aria-valuetext attribute 3. Put a number to a field. e.g. put "2013" to a year field ==> -webkit-datetime-edit-*-field has aria-valuetext="2013" 4. Delete the number in the field by Backspace key ==> -webkit-datetime-edit-*-field has aria-valuetext="blank" aria-valuetext should be consistent in the step 2 and step 4 above.
Attachments
Patch
(23.67 KB, patch)
2013-01-25 00:48 PST
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2013-01-24 19:26:50 PST
aria-valuenow is also inconsistent. Step 2: No aria-valuenow attribute Step 4: aria-valuenow="yyyy"
Kent Tamura
Comment 2
2013-01-24 19:52:01 PST
http://www.w3.org/TR/wai-aria/states_and_properties#aria-valuenow
According to the specification, we should remove aria-valuenow attribute in Step 4. I think aria-valuetext should be "blank" in Step 2.
Kent Tamura
Comment 3
2013-01-24 21:06:58 PST
Also, aria-valuenow should be a number. We set non-numbers for AM/PM field.
Kent Tamura
Comment 4
2013-01-25 00:48:41 PST
Created
attachment 184690
[details]
Patch
Kentaro Hara
Comment 5
2013-01-25 01:23:58 PST
Comment on
attachment 184690
[details]
Patch Looks good to me
WebKit Review Bot
Comment 6
2013-01-25 02:12:17 PST
Comment on
attachment 184690
[details]
Patch Clearing flags on attachment: 184690 Committed
r140803
: <
http://trac.webkit.org/changeset/140803
>
WebKit Review Bot
Comment 7
2013-01-25 02:12:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug