Source/WebCore/html/shadow/DateTimeFieldElement.cpp
@@ -50,6 +50,7 @@ DateTimeFieldElement::DateTimeFieldElement(Document* document, FieldOwner& field
 {
     // On accessibility, DateTimeFieldElement acts like spin button.
     setAttribute(roleAttr, "spinbutton");
+    setAttribute(aria_valuetextAttr, AXDateTimeFieldEmptyValueText());
 }
 
 void DateTimeFieldElement::defaultEventHandler(Event* event)
@@ -206,11 +207,21 @@ void DateTimeFieldElement::updateVisibleValue(EventBehavior eventBehavior)
         return;
 
     textNode->replaceWholeText(newVisibleValue, ASSERT_NO_EXCEPTION);
-    setAttribute(aria_valuetextAttr, hasValue() ? newVisibleValue : AXDateTimeFieldEmptyValueText());
-    setAttribute(aria_valuenowAttr, newVisibleValue);
+    if (hasValue()) {
+        setAttribute(aria_valuetextAttr, newVisibleValue);
+        setAttribute(aria_valuenowAttr, String::number(valueForARIAValueNow()));
+    } else {
+        setAttribute(aria_valuetextAttr, AXDateTimeFieldEmptyValueText());
+        removeAttribute(aria_valuenowAttr);
+    }
 
     if (eventBehavior == DispatchEvent && m_fieldOwner)
         m_fieldOwner->fieldValueChanged();
+}
+
+int DateTimeFieldElement::valueForARIAValueNow() const
+{
+    return valueAsInteger();
 }
 
 } // namespace WebCore
