LayoutTests/fast/forms/resources/multiple-fields-ax-aria-attributes.js
@@ -1,0 +1,9 @@
+function focusedElementDescription()
+{
+    var element = accessibilityController.focusedElement;
+    return element.helpText + ', ' +  element.valueDescription + ', intValue:' + element.intValue + ', range:'+ element.minValue + '-' + element.maxValue;
+}
+
+function checkFocusedElementAXAttributes(expected) {
+    shouldBeEqualToString('focusedElementDescription()', expected);
+}
